--- a/gemini-bg-detector-from-csv.html
+++ b/gemini-bg-detector-from-csv.html
@@ -217,14 +217,20 @@
                 const { width, height } = imageDimensions;
                 const { minDepth } = dataStats;
 
+                // For portrait mode, swap width and height
+                canvas.width = height;
+                canvas.height = width;
+
                 // For performance, we create an ImageData object and manipulate its pixel buffer directly.
-                const imageData = ctx.createImageData(width, height);
+                const imageData = ctx.createImageData(canvas.width, canvas.height);
                 const data = imageData.data; // This is a Uint8ClampedArray
 
                 depthData.forEach(p => {
-                    // Each pixel is 4 bytes (R, G, B, A)
-                    const index = (p.y * width + p.x) * 4;
-                    
+                    // Rotate (x, y) 270 degrees clockwise to (height - 1 - y, x)
+                    const rx = height - 1 - p.y;
+                    const ry = p.x;
+                    const index = (ry * canvas.width + rx) * 4;
+
                     if (p.depth > threshold) {
                         // Background points are colored black
                         data[index] = 0;     // Red
